# spatial-vlm-evaluation

./: .gitignore  README.md  Spatial_VLM_Evaluation_From_Scratch (1).ipynb  pyproject.toml
spatial_vlm_eval/: __init__.py  adapters.py  cli.py  evaluation.py  failure_gallery.py  metrics.py  scenes.py  schemas.py
tests/: test_metrics.py
