[project]
name = "spatial-vlm-eval"
version = "0.1.0"
description = "Hands-on spatial VLM evaluation for controlled spatial AI and robotics scenarios."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pillow>=10.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
vlm = [
    "torch",
    "transformers>=4.50",
    "huggingface-hub",
    "accelerate",
    "qwen-vl-utils",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
spatial-vlm-eval = "spatial_vlm_eval.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spatial_vlm_eval*"]
